src/test/deca/context/invalid/classmethode1.deca
class A{
    int meth(){
        return true;
    }
} 
